// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden DOCX — planilhas reais e builders atuais > Draft Survey discharge preserva dados, seções e imagens > Draft Survey discharge: conteúdo 1`] = `
[
  "433 Ana Costa Avenue",
  "Suite 184 - Santos/Brazil",
  "11060-003",
  "Telephone: +55 13 33940655",
  "email: surveyors@naabsa.com",
  "www.naabsa.com",
  "Survey Report",
  "Ref:114/2026",
  "Draft Survey",
  "“MV GOLDEN”",
  "Flag PANAMA – IMO 9865324",
  "at São Luís — ação Port/Brazil – May 30th, 2026",
  "         ",
  "PERSON / COMPANIES CONTACTED",
  "Client",
  "—",
  "—",
  "Undersigned Surveyor",
  "NAABSA Marine Surveyors",
  "Mr. Wagner de Abreu",
  "Vessel’s Command",
  "Master / Chief Officer",
  "Mr. Carlos Eduardo / Mr. Carlos Eduardo",
  "Contents",
  "Background",
  "Ship’s Particulars",
  "Initial",
  "3.1. Draft Readings",
  "3.2. Sea water density",
  "3.3. Ballast water and fresh water",
  "3.4. Fuel R.O.B.",
  "3.5. Initial Draft details",
  "Intermediate",
  "4.1. Draft Readings",
  "4.2. Sea water density",
  "4.3. Ballast water and fresh water",
  "4.4. Fuel R.O.B.",
  "4.5. Intermediate Draft Details",
  "Final",
  "5.1. Draft Readings",
  "5.2. Sea water density",
  "5.3. Ballast water and fresh water",
  "5.4. Fuel R.O.B.",
  "5.5. Final Draft details",
  "Photographic Report",
  "6.1. Initial",
  "6.2. Intermediate",
  "6.3. Final",
  "Attachment",
  "Background",
  "In compliance with the appointment survey from Messrs. —, we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo discharged and to compare it with the Bills of lading.",
  " ",
  "She called São Luís — ação Port to discharge a cargo of SOYBEANS IN BULK in bulk loaded in VANCOUVER, CANADA.",
  "Ship’s Particulars",
  "Flag",
  ":",
  "PANAMA",
  "Port registry",
  ":",
  "PANAMA",
  "Call sign",
  ":",
  "V7356",
  "IMO number",
  ":",
  "9865324",
  "Type",
  ":",
  "BULK CARRIER",
  "Delivered",
  ":",
  "2023",
  "LOA",
  ":",
  "199.98 m",
  "LBP",
  ":",
  "195.00 m",
  "Depth moulded",
  ":",
  "19.30 m",
  "Breadth moulded",
  ":",
  "32.24 m",
  "Net tonnage",
  ":",
  "21,173 mt",
  "Gross tonnage",
  ":",
  "36,140 mt",
  "Summer DWT         ",
  ":",
  "63,575 mt",
  "Initial",
  "The initial Draft Survey was carried out on February 8th, 2026, upon berthing at EXPPOERT CORRIDOR Terminal, shed 213 from 07:55h up to 10:00h local time jointly with ship&apos;s command and the undersigned surveyor.",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "2.1300 m",
  "Fwd",
  "4.780 m",
  "4.7530 m",
  "Trim correct",
  "2.2624 m",
  "Ms",
  "5.840 m",
  "5.8400 m",
  "Heel",
  "-0.11° Port Side",
  "Aft",
  "6.910 m",
  "7.0153 m",
  "Deflection",
  "-4.4 cm Hogging",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel’s hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: According to the logbook – FWE.",
  "Initial Draft details",
  "Intermediate",
  "The intermediate Draft Survey was carried out on February 11th, 2026, from 17:20 up to 19:00 h local time jointly with ship&apos;s command and the undersigned surveyor to ascertain the total quantity of the cargo discharged being the following figures disclosed:",
  "                                         ",
  "BsL figures (Official)......................: 59,828.935 MT",
  "NAABSA’s surveyor figures...................: 59,852.754 MT",
  "Difference as per our figures...............: + 23.819 MT or + 4.000 %",
  "Vessel’s figures............................: 70,600.000 MT",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "0.1250 m",
  "Fwd",
  "13.175 m",
  "13.1734 m",
  "Trim correct",
  "0.1328 m",
  "Ms",
  "13.280 m",
  "13.2796 m",
  "List",
  "0.04° Starboard Side",
  "Aft",
  "13.300 m",
  "13.3062 m",
  "Deflection",
  "4.0 cm Sagging",
  " ",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel’s hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: Declared by Ch/Eng at time of survey.",
  "Intermediate Draft Details",
  "Final",
  "          ",
  "The final Draft Survey was carried out on May 30th, 2026, from 14:30 up to 16:00 h local time jointly with ship&apos;s command and the undersigned surveyor to ascertain the total quantity of the cargo discharged being the following figures disclosed:",
  "                                         ",
  "BsL figures (Official)......................: 59,828.935 MT",
  "NAABSA’s surveyor figures...................: 59,852.754 MT",
  "Difference as per our figures...............: + 23.819 MT or + 4.000 %",
  "Vessel’s figures............................: 70,600.000 MT",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "0.1250 m",
  "Fwd",
  "13.175 m",
  "13.1734 m",
  "Trim correct",
  "0.1328 m",
  "Ms",
  "13.280 m",
  "13.2796 m",
  "Heel",
  "-0.04° Port Side",
  "Aft",
  "13.300 m",
  "13.3062 m",
  "Deflection",
  "4.0 cm Sagging",
  " ",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: Declared by Ch/Eng at time of survey.",
  "Final Draft Details",
  "Photographic Report",
  "Initial",
  "Intermediate",
  "Final",
  "Attachment",
  "Draft Survey Certificates issued by undersigned surveyor",
  "Draft Survey Certificate issued by vessel",
  "Draft Survey Certificate issued by Terminal’s surveyor",
]
`;

exports[`Golden DOCX — planilhas reais e builders atuais > Draft Survey loading preserva dados, seções e imagens > Draft Survey loading: conteúdo 1`] = `
[
  "433 Ana Costa Avenue",
  "Suite 184 - Santos/Brazil",
  "11060-003",
  "Telephone: +55 13 33940655",
  "email: surveyors@naabsa.com",
  "www.naabsa.com",
  "Survey Report",
  "Ref:114/2026",
  "Draft Survey",
  "“MV GOLDEN”",
  "Flag PANAMA – IMO 9865324",
  "at São Luís — ação Port/Brazil – May 30th, 2026",
  "         ",
  "PERSON / COMPANIES CONTACTED",
  "Client",
  "—",
  "—",
  "Undersigned Surveyor",
  "NAABSA Marine Surveyors",
  "Mr. Wagner de Abreu",
  "Vessel’s Command",
  "Master / Chief Officer",
  "Mr. Carlos Eduardo / Mr. Carlos Eduardo",
  "Contents",
  "Background",
  "Ship’s Particulars",
  "Initial",
  "3.1. Draft Readings",
  "3.2. Sea water density",
  "3.3. Ballast water and fresh water",
  "3.4. Fuel R.O.B.",
  "3.5. Initial Draft details",
  "Intermediate",
  "4.1. Draft Readings",
  "4.2. Sea water density",
  "4.3. Ballast water and fresh water",
  "4.4. Fuel R.O.B.",
  "4.5. Intermediate Draft Details",
  "Final",
  "5.1. Draft Readings",
  "5.2. Sea water density",
  "5.3. Ballast water and fresh water",
  "5.4. Fuel R.O.B.",
  "5.5. Final Draft details",
  "Photographic Report",
  "6.1. Initial",
  "6.2. Intermediate",
  "6.3. Final",
  "Attachment",
  "Background",
  "In compliance with the appointment survey from Messrs. —, we attended the vessel to carry out the Draft Survey to ascertain the total quantity of cargo loaded and to compare it with the Shore scale.",
  " ",
  "She called São Luís — ação Port to load a cargo of SOYBEANS IN BULK in bulk bound to VANCOUVER, CANADA.",
  "Ship’s Particulars",
  "Flag",
  ":",
  "PANAMA",
  "Port registry",
  ":",
  "PANAMA",
  "Call sign",
  ":",
  "V7356",
  "IMO number",
  ":",
  "9865324",
  "Type",
  ":",
  "BULK CARRIER",
  "Delivered",
  ":",
  "2023",
  "LOA",
  ":",
  "199.98 m",
  "LBP",
  ":",
  "195.00 m",
  "Depth moulded",
  ":",
  "19.30 m",
  "Breadth moulded",
  ":",
  "32.24 m",
  "Net tonnage",
  ":",
  "21,173 mt",
  "Gross tonnage",
  ":",
  "36,140 mt",
  "Summer DWT         ",
  ":",
  "63,575 mt",
  "Initial",
  "The initial Draft Survey was carried out on February 8th, 2026, upon berthing at EXPPOERT CORRIDOR Terminal, shed 213 from 07:55h up to 10:00h local time jointly with ship&apos;s command and the undersigned surveyor.",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "2.1300 m",
  "Fwd",
  "4.780 m",
  "4.7530 m",
  "Trim correct",
  "2.2624 m",
  "Ms",
  "5.840 m",
  "5.8400 m",
  "Heel",
  "-0.11° Port Side",
  "Aft",
  "6.910 m",
  "7.0153 m",
  "Deflection",
  "-4.4 cm Hogging",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel’s hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: According to the logbook – FWE.",
  "Initial Draft details",
  "Intermediate",
  "The intermediate Draft Survey was carried out on February 11th, 2026, from 17:20 up to 19:00 h local time jointly with ship&apos;s command and the undersigned surveyor to ascertain the total quantity of the cargo loaded being the following figures disclosed:",
  "                                         ",
  "Shore Scale figures (Official)..............: 59,828.935 MT",
  "NAABSA’s surveyor figures...................: 59,852.754 MT",
  "Difference as per our figures...............: + 23.819 MT or + 4.000 %",
  "Vessel’s figures............................: 70,600.000 MT",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "0.1250 m",
  "Fwd",
  "13.175 m",
  "13.1734 m",
  "Trim correct",
  "0.1328 m",
  "Ms",
  "13.280 m",
  "13.2796 m",
  "List",
  "0.04° Starboard Side",
  "Aft",
  "13.300 m",
  "13.3062 m",
  "Deflection",
  "4.0 cm Sagging",
  " ",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel’s hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: Declared by Ch/Eng at time of survey.",
  "Intermediate Draft Details",
  "Final",
  "          ",
  "The final Draft Survey was carried out on May 30th, 2026, from 14:30 up to 16:00 h local time jointly with ship&apos;s command and the undersigned surveyor to ascertain the total quantity of the cargo loaded being the following figures disclosed:",
  "                                         ",
  "Shore Scale figures (Official)..............: 59,828.935 MT",
  "NAABSA’s surveyor figures...................: 59,852.754 MT",
  "Difference as per our figures...............: + 23.819 MT or + 4.000 %",
  "Vessel’s figures............................: 70,600.000 MT",
  "Draft readings: Port side from shore, alongside vessel and Starboard side from boat.",
  "Draft Mark",
  "Means",
  "Mean corrected",
  "Trim obs",
  "0.1250 m",
  "Fwd",
  "13.175 m",
  "13.1734 m",
  "Trim correct",
  "0.1328 m",
  "Ms",
  "13.280 m",
  "13.2796 m",
  "Heel",
  "-0.04° Port Side",
  "Aft",
  "13.300 m",
  "13.3062 m",
  "Deflection",
  "4.0 cm Sagging",
  " ",
  "Sea water density: A seawater sample was collected in way of the midship draft mark, on the sea side. The vessel's hydrometer was considered the official instrument for all readings.",
  "Ballast water and fresh water: All ballast water tanks were gauged individually, and the volumes were calculated by applying the applicable trim and list corrections. The fresh water quantity was provided by the Chief Officer",
  "Fuel R.O.B.: Declared by Ch/Eng at time of survey.",
  "Final Draft Details",
  "Photographic Report",
  "Initial",
  "Intermediate",
  "Final",
  "Attachment",
  "Draft Survey Certificates issued by undersigned surveyor",
  "Draft Survey Certificate issued by vessel",
  "Draft Survey Certificate issued by Terminal’s surveyor",
]
`;

/* Obsoleto: o caso MSC passou a verificar os itens críticos explicitamente.
exports[`Golden DOCX — planilhas reais e builders atuais > MSC usa dados reais e gera documento próprio > MSC: conteúdo 1`] = `
[
  "433 Ana Costa Avenue",
  "Suite 184 - Santos/Brazil",
  "11060-003",
  "Telephone: +55 13 33940655",
  "email: surveyors@naabsa.com",
  "www.naabsa.com",
  "Survey Report",
  "MM623R",
  "ROB + Sludge Disposal",
  "“MSC GOLDEN”",
  "Flag Liberia / IMO 9979022",
  "at PARANAGUA Port – August 15th, 2026",
  "PERSON / COMPANIES CONTACTED",
  "Client",
  "MSC SHIPMANAGEMENT LIMITED, LIMASSOL, CYPRUS",
  "Undersigned Surveyor",
  "NAABSA Marine Surveyors",
  "ARMANDO JUNIOR",
  "Vessel&apos;s Command",
  "Master / Chief Engineer",
  "MUKESH MAHENDRA MIRANDA / SIBI JESU ANTHONY",
  "Contents",
  "1. Vessel&apos;s details (Ship&apos;s Particulars)	",
  "2. Time log	",
  "2.1 Found at Survey	",
  "2.2 Purifiers Settings	",
  "2.3 Temperature	",
  "2.4 Specific Gravities	",
  "2.5 Time log	",
  "3. Gross volume — m³	",
  "4. Vessel	",
  "4.1 Photographic Report	",
  "5. Engine Room	",
  "5.1 Photographic Report	",
  "6. Survey attendance	",
  "6.1 Photographic Report	",
  "7. Attachment	",
  "1. Vessel&apos;s details (Ship&apos;s Particulars)",
  "Manager:",
  "MSC SHIPMANAGEMENT LIMITED, LIMASSOL, CYPRUS",
  "Name:",
  "MSC GOLDEN",
  "Flag:",
  "Liberia",
  "Port registry:",
  "MONROVIA",
  "Call sign:",
  "A8CA7",
  "IMO number:",
  "9979022",
  "Type:",
  "Container Carrier",
  "Delivered:",
  "2026",
  "LOA:",
  "335.00 m",
  "LBP:",
  "329.50 m",
  "Breadth:",
  "45.60 m",
  "Depth:",
  "25.40 m",
  "Net tonnage:",
  "64 mt",
  "Gross tonnage:",
  "101 mt",
  "Light ship:",
  "37922.27 t",
  "2. Time log",
  "2.1 Found at Survey",
  "We did attend vessel on 15/08/2026, to disclose the total of fuel remaining on board, to compare it with vessel’s logbook and to verify the total amount of sludge disposed.",
  "The opening and closing soundings took place with cargo operation/movement in progress.",
  "The purifiers were found switched off and no transfers were carried out.",
  "2.2 Purifiers Settings",
  "Temperature:",
  "98 °C",
  "Flow setting by each purifier:",
  "1 x 2,0 m³",
  "Bowl discharging frequency:",
  "60 minutes",
  "2.3 Temperature",
  "Fuel oil Storage tank – Infrared thermometer: Display at ECR",
  "Service tanks – Glass thermometer",
  "Diesel oil storage and Service tanks – Infrared thermometer: ER",
  "Engine room temperature: 30 °C",
  "Sea water temperature: 21 °C",
  "2.4 Specific Gravities",
  "Applied according to the vessel’s records (BDNs) presented by Chief Engineer at time of survey.",
  "3. Gross volume — m³",
  "Calculated according to the ship’s tanks sounding table provided by Chief Engineer at time of survey. All corrections were applied accordingly.",
  "After calculations, the logbook and VRS were updated according to the figures disclosed by surveyor.",
  "4. Vessel",
  "4.1 Photographic Report",
  "—",
  "5. Engine Room",
  "5.1 Photographic Report",
  "—",
  "6. Survey attendance",
  "6.1 Photographic Report",
  "—",
  "7. Attachment",
  "Sludge removal certificates.",
  "Sludge disposal receipts.",
  "VRS / Logbook updated pages.",
  "Calibration certificates (flowmeters).",
]
`; */
